--- a/app/globals.scss
+++ b/app/globals.scss
@@ -255,7 +255,23 @@ footer {
     input[type=range]::-webkit-slider-thumb {
       height: 40px;
       width: 40px;
-      margin-top: -35px;
+      margin-top: -37px;
     }
   }
+}
+
+#product {
+  background: #0f0c29;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #000000, #130f26, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #000000, #130f26, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+.specs-card {
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(0, 0, 0, 0.75);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  width: 150px;
+  height: 90px;
+}
 }
