--- a/app/globals.scss
+++ b/app/globals.scss
@@ -241,21 +241,23 @@ footer {
 
 #costCalculator {
   input[type=range]::-webkit-slider-thumb {
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     border-radius: 3px;
     background-color: transparent;
     background: url('./images/location-dot.svg') center center no-repeat;
     cursor: pointer;
     -webkit-appearance: none;
-    margin-top: -28px;
+    margin-top: -37px;
+    position: relative;
+    z-index: 100;
   }
 
   @media (min-width: 767px) {
     input[type=range]::-webkit-slider-thumb {
-      height: 40px;
-      width: 40px;
-      margin-top: -37px;
+      height: 50px;
+      width: 50px;
+      margin-top: -45px;
     }
   }
 }
@@ -270,8 +272,7 @@ background: linear-gradient(to bottom, #000000, #130f26, #000000); /* W3C, IE 10
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: rgba(0, 0, 0, 0.75);
   border-radius: 12px;
+  padding: 16px;
   border: 1px solid rgba(255, 255, 255, 0.125);
-  width: 150px;
-  height: 90px;
 }
 }
