--- a/app/globals.scss
+++ b/app/globals.scss
@@ -214,7 +214,7 @@ footer {
   transition: all 0.5s ease-out;
 }
 
-@media (min-height: 800px) {
+@media (min-height: 700px) {
   #custom-video {
     height: 700px !important;
   }
@@ -238,14 +238,13 @@ footer {
   }
 }
 
-
 #costCalculator {
-  input[type=range]::-webkit-slider-thumb {
+  input[type="range"]::-webkit-slider-thumb {
     height: 40px;
     width: 40px;
     border-radius: 3px;
     background-color: transparent;
-    background: url('./images/location-dot.svg') center center no-repeat;
+    background: url("./images/location-dot.svg") center center no-repeat;
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -37px;
@@ -254,7 +253,7 @@ footer {
   }
 
   @media (min-width: 767px) {
-    input[type=range]::-webkit-slider-thumb {
+    input[type="range"]::-webkit-slider-thumb {
       height: 50px;
       width: 50px;
       margin-top: -45px;
@@ -263,22 +262,46 @@ footer {
 }
 
 #product {
-  background: #130f26;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #000000, #130f26, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #000000, #130f26, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #130f26; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #000000,
+    #130f26,
+    #000000
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #000000,
+    #130f26,
+    #000000
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-.specs-card {
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(0, 0, 0, 0.75);
-  border-radius: 12px;
-  padding: 16px;
-  border: 1px solid rgba(255, 255, 255, 0.125);
-}
+  .specs-card {
+    background: rgba(19, 15, 38, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    padding: 16px;
+  }
 }
 
 #footer {
-  background: #130f26;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #000000, #130f26, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #000000, #130f26, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+  background: #130f26; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #000000,
+    #130f26,
+    #000000
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #000000,
+    #130f26,
+    #000000
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.mobile-menu {
 }
