new color scheme

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -115,7 +115,7 @@ footer {
 // Eduverse GLitch
 
 .glitch {
-  color: #f9a81b;
+  color: #40b93c;
   // font-size:100px;
   position: relative;
   // width:400px;
@@ -262,17 +262,17 @@ footer {
 }
 
 #product {
-  background: #130f26; /* fallback for old browsers */
+  background: #000c38; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to bottom,
     #000000,
-    #130f26,
+    #000c38,
     #000000
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to bottom,
     #000000,
-    #130f26,
+    #000c38,
     #000000
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
@@ -288,17 +288,17 @@ footer {
 }
 
 #footer {
-  background: #130f26; /* fallback for old browsers */
+  background: #000c38; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to bottom,
     #000000,
-    #130f26,
+    #000c38,
     #000000
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to bottom,
     #000000,
-    #130f26,
+    #000c38,
     #000000
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
