--- a/app/globals.scss
+++ b/app/globals.scss
@@ -274,3 +274,19 @@ footer {
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
 }
+
+.newsletter {
+  background: #010a26; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #000000,
+    #010a26,
+    #000000
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #000000,
+    #010a26,
+    #000000
+  );
+}
