--- a/app/globals.scss
+++ b/app/globals.scss
@@ -228,21 +228,10 @@ footer {
 }
 
 #product {
-  background: #010a26; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to bottom,
-    #000000,
-    #010a26,
-    #000000
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    #000000,
-    #010a26,
-    #000000
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #000000; 
+
   .specs-card {
-    background: rgba(19, 15, 38, 0.25);
+    background: rgba(0, 0, 0, 0.25);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -289,4 +278,12 @@ footer {
     #010a26,
     #000000
   );
+}
+
+.overlay-gradient-b-intro {
+  background: linear-gradient(to bottom, #000000 5%, rgba(0, 0, 0, 0) 80%);
+}
+
+.overlay-gradient-t-intro {
+  background: linear-gradient(to top, #000000 1%, rgba(0, 0, 0, 0) 100%);
 }
